// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageContainer > basic 1`] = `
<div
  class="ant-pro-page-container ant-pro-page-container-with-footer"
>
  <div
    class="ant-page-header ant-pro-page-container-warp-page-header ant-page-header-ghost"
  >
    <div
      class="ant-page-header-heading "
    >
      <div
        class="ant-page-header-heading-left"
      >
        <span
          class="ant-page-header-heading-title"
          title="页面标题"
        >
          页面标题
        </span>
      </div>
      <span
        class="ant-page-header-heading-extra"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              type="button"
            >
              <span>
                次要按钮
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
              type="button"
            >
              <span>
                主要按钮
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-dropdown-trigger"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="ellipsis"
                  class="anticon anticon-ellipsis"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="ellipsis"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    >
      <div
        class="ant-pro-page-container-children-container"
      >
        <div
          class="ant-card ant-card-bordered"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-descriptions ant-descriptions-horizontal"
            >
              <div
                class="ant-descriptions-header"
              >
                <div
                  class="ant-descriptions-title"
                >
                  基本信息
                </div>
              </div>
              <div
                class="ant-descriptions-view"
              >
                <table>
                  <tbody>
                    <tr
                      class="ant-descriptions-row"
                    >
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            创建人
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            <span
                              aria-describedby="test-id"
                              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
                            >
                              曲丽丽
                            </span>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            电话号码
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            <span
                              aria-describedby="test-id"
                              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
                            >
                              1810000000
                            </span>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            地址
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            <span
                              aria-describedby="test-id"
                              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
                            >
                              浙江省杭州市西湖区工专路
                            </span>
                          </span>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-descriptions-row"
                    >
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            关联表单
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            <span
                              aria-describedby="test-id"
                              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
                            >
                              <a>
                                421421
                              </a>
                            </span>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            创建时间
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            <span
                              aria-describedby="test-id"
                              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
                            >
                              2017-01-10
                            </span>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            备注
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            <span
                              aria-describedby="test-id"
                              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
                            >
                              这是备注
                            </span>
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageContainer > title 1`] = `
<div
  class="ant-pro-page-container ant-pro-page-container-with-footer"
>
  <div
    class="ant-page-header ant-pro-page-container-warp-page-header ant-page-header-ghost"
  >
    <div
      class="ant-page-header-heading "
    >
      <div
        class="ant-page-header-heading-left"
      >
        <span
          class="ant-page-header-heading-title"
          title="页面标题"
        >
          页面标题
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    >
      <div
        class="ant-pro-page-container-children-container"
      >
        <div
          class="ant-card ant-card-bordered"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-descriptions ant-descriptions-horizontal"
            >
              <div
                class="ant-descriptions-header"
              >
                <div
                  class="ant-descriptions-title"
                >
                  基本信息
                </div>
              </div>
              <div
                class="ant-descriptions-view"
              >
                <table>
                  <tbody>
                    <tr
                      class="ant-descriptions-row"
                    >
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            创建人
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            <span
                              aria-describedby="test-id"
                              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
                            >
                              曲丽丽
                            </span>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            电话号码
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            <span
                              aria-describedby="test-id"
                              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
                            >
                              1810000000
                            </span>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            地址
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            <span
                              aria-describedby="test-id"
                              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
                            >
                              浙江省杭州市西湖区工专路
                            </span>
                          </span>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-descriptions-row"
                    >
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            关联表单
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            <span
                              aria-describedby="test-id"
                              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
                            >
                              <a>
                                421421
                              </a>
                            </span>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            创建时间
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            <span
                              aria-describedby="test-id"
                              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
                            >
                              2017-01-10
                            </span>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-descriptions-item"
                        colspan="1"
                      >
                        <div
                          class="ant-descriptions-item-container"
                        >
                          <span
                            class="ant-descriptions-item-label"
                          >
                            备注
                          </span>
                          <span
                            class="ant-descriptions-item-content"
                          >
                            <span
                              aria-describedby="test-id"
                              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
                            >
                              这是备注
                            </span>
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
